feat(localStorage): add secoes no localStorage

--- a/index.html
+++ b/index.html
@@ -246,31 +246,31 @@
                                 <h2 class="accordion-header" id="music">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionMusic" aria-expanded="false" aria-controls="accordionMusic">
                                         <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
-                                        <h5 class="fw-bold">Spotify</h5>
+                                        <h5 class="fw-bold">Música</h5>
                                     </button>
                                 </h2>
                                 <div id="accordionMusic" class="accordion-collapse collapse" aria-labelledby="music" data-bs-parent="#accordionExample">
-                                    <div class="p-3 d-flex align-items-center switch-spotify d-none">
+                                    <div class="p-3 d-flex align-items-center switch-music d-none">
                                         <div class="switch__container">
-                                            <input id="switch-spotify" class="switch switch--shadow" type="checkbox" checked />
-                                            <label for="switch-spotify"></label>
+                                            <input id="switch-music" class="switch switch--shadow" type="checkbox" checked />
+                                            <label for="switch-music"></label>
                                         </div>
-                                        <p class="mb-0">Mostrar Vídeo</p>
+                                        <p class="mb-0">Mostrar plataforma</p>
                                     </div>
                                     <div class="accordion-body section-music">
                                         <div class="d-flex justify-between align-items-center my-4" data-element="music">
                                             <div class="form-floating w-100">
                                                 <input type="text" class="form-control" id="beacons-music" placeholder="YpkTADgjBas">
-                                                <label for="beacons-music">Spotify</label>
-                                                <div id="spotifylHelp" class="form-text">
-                                                    Copie o código gerado pelo spotify, e cole todo o
+                                                <label for="beacons-music">Música</label>
+                                                <div id="musiclHelp" class="form-text">
+                                                    Copie o código
                                                     <code>
                                                             iframe
                                                         </code>
-                                                    no campo.
+                                                    gerado por sua plataforma preferida e cole no campo acima.
                                                 </div>
                                             </div>
-                                            <ion-icon class="add-spotify" name="add-circle-outline" size="large"></ion-icon>
+                                            <ion-icon class="add-music" name="add-circle-outline" size="large"></ion-icon>
                                         </div>
                                     </div>
                                 </div>
