feat(twitter): add twitter no localStorage

--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
                             </div>
                         </div>
 
-                        <!-- TWEET -->
+                        <!-- Twitter -->
                         <div class="card-element" draggable="true">
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="tweet">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionTweet" aria-expanded="false" aria-controls="accordionTweet">
                                         <ion-icon name="reorder-two-outline" class="mr-1 drag-n-drop"></ion-icon>
-                                        <h5 class="fw-bold">Tweet</h5>
+                                        <h5 class="fw-bold">Twitter</h5>
                                     </button>
                                 </h2>
                                 <div id="accordionTweet" class="accordion-collapse collapse" aria-labelledby="tweet" data-bs-parent="#accordionExample">
