style(preview): melhorando interface do preview

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                 <div class="h-100 d-flex justify-content-center align-items-center">
                     <div class="border-preview mt-5">
                         <div class="dropzone-preview ">
+                            <div class="preview"></div>
                         </div>
                     </div>
                 </div>
