feat(video): aceita varias plataformas de video

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <a href="#" class="uk-accordion-title">Vídeo</a>
                         <div class="uk-accordion-content uk-padding uk-background-default">
                             <div class="uk-flex uk-flex-right">
-                                <div uk-tooltip="Apenas ID. Exemplo YpkTADgjBas .Normalmente está após watch?v=">
+                                <div uk-tooltip="Adicione vídeo do YouTube, Instagram (Reels), TikTok ou Vimeo.">
                                     <ion-icon name="information-circle-outline" size="large"></ion-icon>
                                 </div>
                             </div>
