feat(tooltip): correcao do texto de musica

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             <div class="accordion-body section-video">
                                 <div class="uk-flex uk-flex-middle uk-flex-between my-4" data-element="video">
                                     <div class="uk-margin">
-                                        <label for="beacons-video" class="uk-form-label">YouTube</label>
+                                        <label for="beacons-video" class="uk-form-label">Vídeo</label>
                                         <div class="uk-form-controls">
                                             <input type="text" class="uk-input" id="beacons-video" placeholder="YpkTADgjBas">
                                         </div>
@@ -224,11 +224,7 @@
                         <a href="#" class="uk-accordion-title">Música</a>
                         <div class="uk-accordion-content uk-padding uk-background-default">
                             <div class="uk-flex uk-flex-right">
-                                <div uk-tooltip="Copie o código
-                                            <code>
-                                                iframe
-                                            </code>
-                                            gerado por sua plataforma preferida e cole no campo a seguir.">
+                                <div uk-tooltip="Copie o <code>iframe</code> gerado pelo Spotify ou Deezer e cole no campo a seguir.">
                                     <ion-icon name="information-circle-outline" size="large"></ion-icon>
                                 </div>
 
