feat(fonts): add personalizacao de fonts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Beacons</title>
 </head>
 
@@ -362,10 +361,51 @@
                                                 </div>
 
                                             </div>
-                                            <button class="uk-button uk-button-secondary change-background">Adicionar</button>
                                         </div>
                                     </div>
                                 </div>
+                            </li>
+                            <li class="accordion-item">
+                                <a class="uk-accordion-title" href="#">Fonte</a>
+                                <div class="uk-accordion-content uk-padding uk-background-default">
+                                    <div class="accordion-body font">
+                                        <div class="uk-flex uk-flex-bottom uk-flex-between" data-element="effects">
+                                            <div class="uk-flex uk-flex-column">
+                                                <h4>Títulos</h4>
+                                                <div class="uk-column-1-2">
+                                                    <div class="uk-margin chooseColor">
+                                                        <label for="titleFontColor" class="uk-form-label uk-margin-bottom">Escolher Cor</label>
+                                                        <div class="uk-form-controls">
+                                                            <input type="color" class="uk-input" id="titleFontColor">
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-margin">
+                                                        <label for="titleFontFamily" class="uk-form-label uk-margin-bottom">Escolher Fonte</label>
+                                                        <select class="uk-select" id="titleFontFamily">
+                                                            <option selected disabled>Selecionar Fonte</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                                <h4>Outros textos</h4>
+                                                <div class="uk-column-1-2">
+                                                    <div class="uk-margin chooseColor">
+                                                        <label for="fontColor" class="uk-form-label uk-margin-bottom">Escolher Cor</label>
+                                                        <div class="uk-form-controls">
+                                                            <input type="color" class="uk-input" id="fontColor">
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="uk-margin">
+                                                        <label for="fontFamily" class="uk-form-label uk-margin-bottom">Escolher Fonte</label>
+                                                        <select class="uk-select" id="fontFamily">
+                                                            <option selected disabled>Selecionar Fonte</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                             </li>
                         </ul>
                     </li>
