--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <hr class="uk-divider-icon">
                             </li>
                             <li class="accordion-item">
                                 <a class="uk-accordion-title" href="#">Efeitos</a>
@@ -364,6 +365,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <hr class="uk-divider-icon">
                             </li>
                             <li class="accordion-item">
                                 <a class="uk-accordion-title" href="#">Fonte</a>
@@ -406,6 +408,7 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <hr class="uk-divider-icon">
                             </li>
                         </ul>
                     </li>
@@ -414,8 +417,13 @@
         </div>
         <!-- PREVIEW -->
         <div class="preview-grid">
-            <div class="uk-margin-top sticky-top">
+
+
+            <div class="sticky-top">
                 <div class="uk-height-1-1">
+                    <div class="uk-margin-auto uk-flex uk-margin-bottom">
+                        <button onclick="location.href='/preview.html'" class="uk-button uk-button-text btn-preview">Visualizar</button>
+                    </div>
                     <div class="border-preview uk-margin-auto">
                         <div class="dropzone-preview ">
                             <div class="effect"></div>
@@ -431,7 +439,7 @@
                 <p>
                     Nossa plataforma utiliza cookies para fornecer uma ótima experiência a seus usuários; para identificar seus membros registrados (usuários que se registraram em nosso site); monitorar e analisar o desempenho, operação e eficácia da plataforma online; e para garantir que nossa plataforma seja segura. Os cookies que são inicialmente adicionados à sua navegação e acesso podem ser categorizados como cookies essenciais. Esses cookies permitem funcionalidades básicas, como segurança, verificação de identidade e gerenciamento de rede e não podem ser desativados em nosso site.
                 </p>
-                <button class="btn cookies-save">Aceitar e Continuar</button>
+                <button class="uk-button uk-button-secondary uk-button-large cookies-save">Aceitar e Continuar</button>
             </div>
         </div>
     </div>
