feat(preview): mostrando foto de perfil

--- a/index.html
+++ b/index.html
@@ -417,12 +417,10 @@
         </div>
         <!-- PREVIEW -->
         <div class="preview-grid">
-
-
             <div class="sticky-top">
                 <div class="uk-height-1-1">
                     <div class="uk-margin-auto uk-flex uk-margin-bottom">
-                        <button onclick="location.href='/preview.html'" class="uk-button uk-button-text btn-preview">Visualizar</button>
+                        <button onclick="location.href='/preview.html'" class="uk-button uk-button-text btn-preview">Visualizar 👀</button>
                     </div>
                     <div class="border-preview uk-margin-auto">
                         <div class="dropzone-preview ">
