--- a/preview.html
+++ b/preview.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <button onclick="history.back()" class="uk-button uk-button-text btn-goback">Voltar</button>
+  <button onclick="history.back()" class="uk-button uk-button-text btn-goback">⬅️ Voltar</button>
   <div class="preview-container">
     <div class="border-preview uk-margin-auto">
       <div class="dropzone-preview ">
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <script type="module" src="script.js" defer crossorigin="anonymous"></script>
+  <script type="module" src="preview.js" defer crossorigin="anonymous"></script>
   <!-- UIkit JS -->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.14.1/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.14.1/dist/js/uikit-icons.min.js"></script>
