feat(preview): add preview

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <hr class="uk-divider-icon">
+                                    <hr class="uk-divider-icon">main-grid
                             </li>
                         </ul>
                     </li>
@@ -418,15 +418,14 @@
         <!-- PREVIEW -->
         <div class="preview-grid">
             <div class="sticky-top">
-                <div class="uk-height-1-1">
-                    <div class="uk-margin-auto uk-flex uk-margin-bottom">
-                        <button onclick="location.href='/preview.html'" class="uk-button uk-button-text btn-preview">Visualizar 👀</button>
-                    </div>
-                    <div class="border-preview uk-margin-auto">
-                        <div class="dropzone-preview ">
-                            <div class="effect"></div>
-                            <div class="preview"></div>
-                        </div>
+                <div class="uk-margin-auto uk-flex uk-margin-bottom">
+                    <button class="uk-button uk-button-text btn-preview">Pré-visualizar 👀</button>
+                </div>
+                <div class="border-preview uk-margin-auto">
+                    <div class="dropzone-preview ">
+                        <!-- backgrounds e efeitos -->
+                        <div class="effect"></div>
+                        <div class="preview"></div>
                     </div>
                 </div>
             </div>
