style(abas): melhorando titulo de abas

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
                     <!-- tab conteudo -->
                     <li>
                         <a href="#" id="autoplayer" data-uk-switcher-item="next"></a>
-                        <h2>Conteúdo</h2>
-
-                        <ul class="uk-padding content" uk-accordion uk-sortable="handle: .accordion-item">
+                        <h2 class="title">Conteúdo</h2>
+                        <ul class="uk-padding uk-padding-remove-top content" uk-accordion uk-sortable="handle: .accordion-item">
                             <li class="accordion-item uk-open">
                                 <a class="uk-accordion-title" href="#">Header</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
@@ -263,8 +262,8 @@
                     </li>
                     <!-- tab aparencia -->
                     <li>
-                        <h2>Aparência</h2>
-                        <ul class="uk-padding appearance" uk-accordion>
+                        <h2 class="title">Aparência</h2>
+                        <ul class="uk-padding uk-padding-remove-top appearance" uk-accordion>
                             <li class="accordion-item uk-open">
                                 <a class="uk-accordion-title" href="#">Background</a>
                                 <div class="uk-accordion-content uk-padding uk-background-default">
@@ -302,7 +301,7 @@
                                                     </div>
                                                 </div>
 
-                                                <div class="chooseColorBg uk-margin uk-hidden">
+                                                <div class="chooseColor uk-margin uk-hidden">
                                                     <label for="backgroundColor" class="uk-form-label">Escolher Cor</label>
                                                     <div class="uk-form-controls">
                                                         <input type="color" class="uk-input" id="backgroundColor" placeholder="https://www.com">
